--- a/coin.cabal
+++ b/coin.cabal
@@ -17,6 +17,9 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , hedis
+                     , bytestring
+                     , mtl
   default-language:    Haskell2010
 
 executable coin-exe
@@ -25,6 +28,18 @@ executable coin-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , coin
+                     , hedis
+                     , mtl
+                     , scotty
+                     , text
+                     , blaze-builder
+                     , bytestring
+                     , transformers
+                     , warp
+                     , data-default-class
+                     , hflags
+                     , streaming-commons
+                     , network
   default-language:    Haskell2010
 
 test-suite coin-test
