--- a/coin.cabal
+++ b/coin.cabal
@@ -40,6 +40,7 @@ executable coin-exe
                      , hflags
                      , streaming-commons
                      , network
+                     , wai-extra
   default-language:    Haskell2010
 
 test-suite coin-test
