--- a/coin.cabal
+++ b/coin.cabal
@@ -16,11 +16,22 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Coin
+                     , Coin.Types
+                     , Coin.DataSource.Coin
+                     , Coin.DataSource.Table
+                     , Coin.DataSource
+                     , Coin.API
+                     , Coin.UserEnv
   build-depends:       base >= 4.7 && < 5
-                     , hedis
-                     , bytestring
                      , aeson
                      , unix-time
+                     , mysql-simple
+                     , text
+                     , hashable
+                     , resource-pool
+                     , scotty
+                     , haxl
+                     , async
   default-language:    Haskell2010
 
 executable coin
@@ -29,7 +40,6 @@ executable coin
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , coin
-                     , hedis
                      , mtl
                      , scotty
                      , aeson
@@ -37,9 +47,12 @@ executable coin
                      , warp
                      , data-default-class
                      , streaming-commons
-                     , network
                      , wai-extra
                      , optparse-applicative
+                     , resource-pool
+                     , haxl
+                     , yaml-config
+                     , mysql-simple
   default-language:    Haskell2010
 
 test-suite coin-test
