--- a/stack.yaml
+++ b/stack.yaml
@@ -8,7 +8,11 @@ resolver: lts-7.10
 packages:
 - '.'
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- mysql-simple-0.4.0.0
+- mysql-0.1.4
+- haxl-0.4.0.2
+- yaml-config-0.4.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
