--- a/coin.cabal
+++ b/coin.cabal
@@ -22,6 +22,7 @@ library
                      , Coin.DataSource
                      , Coin.API
                      , Coin.UserEnv
+                     , Coin.Config
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , unix-time
@@ -34,6 +35,8 @@ library
                      , async
                      , dispatch-common
                      , bytestring
+
+                     , time
   default-language:    Haskell2010
 
 executable coin
@@ -51,10 +54,8 @@ executable coin
                      , streaming-commons
                      , wai-extra
                      , optparse-applicative
-                     , resource-pool
                      , haxl
-                     , yaml-config
-                     , mysql-simple
+                     , yaml
                      , bytestring
                      , http-types
   default-language:    Haskell2010
