--- a/coin.cabal
+++ b/coin.cabal
@@ -40,6 +40,7 @@ library
                      , time
 
                      , graphql
+                     , unordered-containers
   default-language:    Haskell2010
 
 executable coin
