--- a/coin.cabal
+++ b/coin.cabal
@@ -40,6 +40,7 @@ library
 
                      , graphql
                      , unordered-containers
+                     , dispatch-common
   default-language:    Haskell2010
 
 executable coin
