--- a/coin.cabal
+++ b/coin.cabal
@@ -40,7 +40,7 @@ library
 
                      , graphql
                      , unordered-containers
-                     , dispatch-common
+                     , yuntan-common
   default-language:    Haskell2010
 
 executable coin
@@ -63,7 +63,7 @@ executable coin
                      , bytestring
                      , http-types
                      , graphql
-                     , dispatch-common
+                     , yuntan-common
   default-language:    Haskell2010
 
 test-suite coin-test
