--- a/stack.yaml
+++ b/stack.yaml
@@ -8,8 +8,8 @@ resolver: lts-8.11
 packages:
 - '.'
 - location:
-    git: https://github.com/Lupino/dispatch-common.git
-    commit: 5eaddce781730a58d1ca7cc15479cc964a336df9
+    git: https://github.com/Lupino/yuntan-common.git
+    commit: be09d369c47141a3c3b21445c3d343ba93876e5c
   extra-dep: true
 - location:
     git: https://github.com/jdnavarro/graphql-haskell.git
@@ -20,7 +20,7 @@ packages:
 
 # Override default flag values for local packages and extra-deps
 flags:
-  dispatch-common:
+  yuntan-common:
     graphql-utils: true
     mysql-config: true
     scotty-utils: true
