--- a/coin.cabal
+++ b/coin.cabal
@@ -27,7 +27,12 @@ library
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , unix-time
-                     , mysql-simple
+                     , psql-utils
+                     , aeson-result
+                     , scotty-utils
+                     , scotty-haxl
+                     , aeson-helper
+                     , graphql-utils
                      , text
                      , hashable
                      , resource-pool
@@ -40,11 +45,6 @@ library
 
                      , graphql
                      , unordered-containers
-                     , yuntan-common-scotty
-                     , yuntan-common-scotty-type
-                     , yuntan-common-list-result
-                     , yuntan-common-graphql
-                     , yuntan-common-config-mysql
                      , http-types
                      , mtl
   default-language:    Haskell2010
@@ -64,8 +64,8 @@ executable coin
                      , optparse-applicative
                      , haxl
                      , yaml
-                     , yuntan-common-scotty-type
-                     , yuntan-common-config-mysql
+                     , psql-utils
+                     , scotty-haxl
   default-language:    Haskell2010
 
 test-suite coin-test
